--- a/components/dashboard.html
+++ b/components/dashboard.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1334,6 +1321,7 @@
 <li><strong>disabled</strong> | <code>boolean</code>: controls whether the dashboard shall be disabled. Default: <code>false</code>.</li>
 <li><strong>label</strong> | <code>string</code>: button label. Default: <code>&apos;Generate&apos;</code>.</li>
 <li><strong>maxWidth</strong> | <code>number</code>: maximum width of dashboard. Default: <code>600</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onGenerate</strong> | <code>function</code>: function invoked when the button is clicked or one of the dashboard input values changes (if <code>autoUpdate</code> is set to <code>true</code>). The function is called with the values of the input fields, in the order in which they are placed in the dashboard. Default: <code>onGenerate() {}</code>.</li>
 <li><strong>title</strong> | <code>(string|node)</code>: card title. Default: <code>&apos;&apos;</code>.</li>
 </ul>
@@ -1380,7 +1368,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.9.1","depth":3,"next":{"title":"Checkbox Input","level":"1.4.9.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"previous":{"title":"Input","level":"1.4.9","depth":2,"path":"chapters/input.md","ref":"chapters/input.md","articles":[{"title":"Dashboard","level":"1.4.9.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},{"title":"Checkbox Input","level":"1.4.9.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},{"title":"Number Input","level":"1.4.9.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},{"title":"Proportions Input","level":"1.4.9.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},{"title":"Select Input","level":"1.4.9.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},{"title":"Text Area","level":"1.4.9.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},{"title":"Voice Input","level":"1.4.9.9","depth":3,"path":"components/input/voice.md","ref":"components/input/voice.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2018-10-08T06:49:58.323Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Dashboard","level":"1.4.9.1","depth":3,"next":{"title":"Checkbox Input","level":"1.4.9.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},"previous":{"title":"Input","level":"1.4.9","depth":2,"path":"chapters/input.md","ref":"chapters/input.md","articles":[{"title":"Dashboard","level":"1.4.9.1","depth":3,"path":"components/dashboard.md","ref":"components/dashboard.md","articles":[]},{"title":"Checkbox Input","level":"1.4.9.2","depth":3,"path":"components/input/checkbox.md","ref":"components/input/checkbox.md","articles":[]},{"title":"Number Input","level":"1.4.9.3","depth":3,"path":"components/input/number.md","ref":"components/input/number.md","articles":[]},{"title":"Proportions Input","level":"1.4.9.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},{"title":"Select Input","level":"1.4.9.5","depth":3,"path":"components/input/select.md","ref":"components/input/select.md","articles":[]},{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},{"title":"Text Area","level":"1.4.9.7","depth":3,"path":"components/input/text-area.md","ref":"components/input/text-area.md","articles":[]},{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},{"title":"Voice Input","level":"1.4.9.9","depth":3,"path":"components/input/voice.md","ref":"components/input/voice.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/dashboard.md","mtime":"2018-11-20T14:56:04.153Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
