--- a/components/data-table.html
+++ b/components/data-table.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1333,13 +1320,15 @@
 <h4 id="options">Options:</h4>
 <ul>
 <li><strong>data</strong> | <code>(array|object) (required)</code>: A data object or array to be viewed. If it is an object, the keys correspond to column values while an array will expect an array of objects with a named field corresponding to each column. Default: <code>none</code>.</li>
-<li><strong>dataInfo</strong> | <code>object</code>: hints providing guidance on how to answer the question. Default: <code>{
+<li><strong>dataInfo</strong> | <code>object</code>: object with <code>info</code> string array describing the data set, the <code>name</code> of the dataset, an <code>object</code> of <code>variables</code> with keys corresponding to variable names and values to variable descriptions, an a <code>showOnStartup</code> boolean controlling whether to display the info modal on startup. Default: <code>{
 &apos;info&apos;: [],
 &apos;name&apos;: &apos;&apos;,
-&apos;variables&apos;: null
+&apos;variables&apos;: null,
+&apos;showInfo&apos;: false
 }</code>.</li>
-<li><strong>onClickRemove</strong> | <code>function</code>: A function specifying an action to take for rows removed from the data. Defaults to an empty function. Default: <code>onClickRemove() {}</code>.</li>
-<li><strong>showRemove</strong> | <code>boolean</code>: A boolean value indicating whether to allow for rows to be removed. Default: <code>false</code>.</li>
+<li><strong>onClickRemove</strong> | <code>function</code>: A function specifying an action to take for rows removed from the data (defaults to an empty function). Default: <code>onClickRemove() {}</code>.</li>
+<li><strong>filters</strong> | <code>array</code>: undefined. Default: <code>[]</code>.</li>
+<li><strong>showRemove</strong> | <code>boolean</code>: indicates whether to display checkboxes for rows to be removed. Default: <code>false</code>.</li>
 <li><strong>style</strong> | <code>object</code>: An object allowing for custom css styling. Defaults to an empty object. Default: <code>{}</code>.</li>
 </ul>
 
@@ -1385,7 +1374,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.2","depth":2,"next":{"title":"Markdown Editor","level":"1.4.3","depth":2,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"previous":{"title":"Data Explorer","level":"1.4.1","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2018-10-08T06:49:58.331Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Data Table","level":"1.4.2","depth":2,"next":{"title":"Markdown Editor","level":"1.4.3","depth":2,"path":"components/markdown-editor.md","ref":"components/markdown-editor.md","articles":[]},"previous":{"title":"Data Explorer","level":"1.4.1","depth":2,"path":"components/data-explorer.md","ref":"components/data-explorer.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/data-table.md","mtime":"2018-11-20T14:56:04.217Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
