--- a/components/free-text-question.html
+++ b/components/free-text-question.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1330,18 +1317,20 @@
 <ul>
 <li><strong>question</strong> | <code>(string|node)</code>: the question displayed at the top of the free text question component. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>hints</strong> | <code>array<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>string</span><span class="token punctuation">&gt;</span></span></code>: hints providing guidance on how to answer the question. Default: <code>[]</code>.</li>
-<li><strong>hintPlacement</strong> | <code>string</code>: placement of the hints (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;bottom&apos;</code>.</li>
+<li><strong>hintPlacement</strong> | <code>string</code>: placement of the hints (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;top&apos;</code>.</li>
 <li><strong>feedback</strong> | <code>boolean</code>: controls whether to display feedback buttons. Default: <code>false</code>.</li>
 <li><strong>solution</strong> | <code>string</code>: a model answer to the problem. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>rows</strong> | <code>number</code>: number of rows of the text field for students to type their answers. Default: <code>5</code>.</li>
 <li><strong>chat</strong> | <code>boolean</code>: controls whether to enable group chat should for the question. Default: <code>false</code>.</li>
 <li><strong>resizable</strong> | <code>boolean</code>: controls whether the text area should be resizable. Default: <code>false</code>.</li>
 <li><strong>placeholder</strong> | <code>string</code>: placeholder text displayed before user has entered any text. Default: <code>&apos;Enter your answer here...&apos;</code>.</li>
+<li><strong>disableSubmitNotification</strong> | <code>boolean</code>: controls whether to disable submission notifications. Default: <code>false</code>.</li>
 <li><strong>submissionMsg</strong> | <code>string</code>: notification displayed when the learner first submits his answer. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>resubmissionMsg</strong> | <code>string</code>: notification displayed for all submissions after the first one. Default: <code>&apos;You have successfully re-submitted your answer.&apos;</code>.</li>
 <li><strong>provideFeedback</strong> | <code>boolean</code>: indicates whether feedback including the correct answer should be displayed after learners submit their answers. Default: <code>true</code>.</li>
 <li><strong>maxlength</strong> | <code>number</code>: maximum allowed number of characters. Default: <code>2500</code>.</li>
 <li><strong>voiceID</strong> | <code>string</code>: voice control identifier. Default: <code>none</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onChange</strong> | <code>function</code>: callback invoked every time the text area value changes; receives the current text as its sole argument. Default: <code>onChange() {}</code>.</li>
 <li><strong>onSubmit</strong> | <code>function</code>: callback invoked when user submits an answer; receives the submitted text as its sole argument. Default: <code>onSubmit() {}</code>.</li>
 </ul>
@@ -1388,7 +1377,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"next":{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"previous":{"title":"Quiz","level":"1.4.7.1","depth":3,"path":"components/quiz.md","ref":"components/quiz.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2018-10-08T06:49:58.335Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"next":{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"previous":{"title":"Quiz","level":"1.4.7.1","depth":3,"path":"components/quiz.md","ref":"components/quiz.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/free-text-question.md","mtime":"2018-11-20T14:56:04.281Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
