--- a/components/input/select.html
+++ b/components/input/select.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="../grid.html">
-            
-                <a href="../grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="../pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="../pages.html">
             
                 <a href="../pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="../revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="../revealer.html">
             
                 <a href="../revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="../slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="../slider.html">
             
                 <a href="../slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="../switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="../switch.html">
             
                 <a href="../switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="../unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="../unveil.html">
             
                 <a href="../unveil.html">
             
@@ -1337,7 +1324,7 @@
 <li><strong>defaultValue</strong> | <code>(number|string|array)</code>: default value of the input at startup. Default: <code>none</code>.</li>
 <li><strong>disabled</strong> | <code>boolean</code>: controls whether the input is active or not. Default: <code>false</code>.</li>
 <li><strong>inline</strong> | <code>boolean</code>: indicates whether the input is displayed inline. Default: <code>false</code>.</li>
-<li><strong>legend</strong> | <code>string</code>: text displayed next to the input. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>legend</strong> | <code>(string|node)</code>: text displayed next to the input. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>multi</strong> | <code>boolean</code>: controls whether one may select multiple answers. Default: <code>false</code>.</li>
 <li><strong>onChange</strong> | <code>function</code>: callback function to be invoked when a choice is made. Default: <code>onChange() {}</code>.</li>
 <li><strong>options</strong> | <code>array</code>: array of indicating the choices available the user. Default: <code>[]</code>.</li>
@@ -1386,7 +1373,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Select Input","level":"1.4.9.5","depth":3,"next":{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},"previous":{"title":"Proportions Input","level":"1.4.9.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/select.md","mtime":"2018-10-08T06:49:58.343Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Select Input","level":"1.4.9.5","depth":3,"next":{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},"previous":{"title":"Proportions Input","level":"1.4.9.4","depth":3,"path":"components/input/proportions.md","ref":"components/input/proportions.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/select.md","mtime":"2018-11-20T14:56:04.465Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
