--- a/components/input/text-area.html
+++ b/components/input/text-area.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="../grid.html">
-            
-                <a href="../grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="../pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="../pages.html">
             
                 <a href="../pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="../revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="../revealer.html">
             
                 <a href="../revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="../slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="../slider.html">
             
                 <a href="../slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="../switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="../switch.html">
             
                 <a href="../switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="../unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="../unveil.html">
             
                 <a href="../unveil.html">
             
@@ -1328,8 +1315,10 @@
 <h4 id="options">Options:</h4>
 <ul>
 <li><strong>defaultValue</strong> | <code>string</code>: default value of the text area. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>value</strong> | <code>string</code>: text value (for controlled component). Default: <code>none</code>.</li>
 <li><strong>disabled</strong> | <code>boolean</code>: controls whether the text area shall be disabled. Default: <code>false</code>.</li>
-<li><strong>legend</strong> | <code>string</code>: legend text. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>legend</strong> | <code>(string|node)</code>: legend text. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>onBlur</strong> | <code>function</code>: callback function invoked when the text area loses focus. Default: <code>onBlur() {}</code>.</li>
 <li><strong>onChange</strong> | <code>function</code>: callback function invoked with the new text when the area text changes. Default: <code>onChange() {}</code>.</li>
 <li><strong>placeholder</strong> | <code>string</code>: placeholder text. Default: <code>&apos;Enter text&apos;</code>.</li>
 <li><strong>resizable</strong> | <code>boolean</code>: controls whether the text area shall be resizable. Default: <code>false</code>.</li>
@@ -1379,7 +1368,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.9.7","depth":3,"next":{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/text-area.md","mtime":"2018-10-08T06:49:58.343Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text Area","level":"1.4.9.7","depth":3,"next":{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},"previous":{"title":"Slider Input","level":"1.4.9.6","depth":3,"path":"components/input/slider.md","ref":"components/input/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/text-area.md","mtime":"2018-11-20T14:56:04.489Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
