--- a/components/input/voice.html
+++ b/components/input/voice.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="../grid.html">
-            
-                <a href="../grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="../pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="../pages.html">
             
                 <a href="../pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="../revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="../revealer.html">
             
                 <a href="../revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="../slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="../slider.html">
             
                 <a href="../slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="../switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="../switch.html">
             
                 <a href="../switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="../unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="../unveil.html">
             
                 <a href="../unveil.html">
             
@@ -1331,8 +1318,9 @@
 <li><strong>defaultValue</strong> | <code>string</code>: default text value. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>grammars</strong> | <code>array</code>: speech grammar list (unsupported). Default: <code>[]</code>.</li>
 <li><strong>language</strong> | <code>string</code>: language identifier. Default: <code>&apos;en-US&apos;</code>.</li>
-<li><strong>legend</strong> | <code>string</code>: legend displayed in front of input field. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>legend</strong> | <code>(string|node)</code>: legend displayed in front of input field. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>mode</strong> | <code>string</code>: set to <code>full</code> to display a text input field alongside the microphone, <code>status</code> to only display a statusbar with the transcribed texts, <code>microphone</code> to show just a button to toggle recording, or <code>none</code> when the voice input should be invisible and purely controlled via hotkeys / voice commands. Default: <code>&apos;full&apos;</code>.</li>
+<li><strong>maxAlternatives</strong> | <code>number</code>: maximum number of alternatives provided per speech recognition result. Default: <code>1</code>.</li>
 <li><strong>onChange</strong> | <code>function</code>: callback function invoked when text input value is updated. Default: <code>onChange() {}</code>.</li>
 <li><strong>onClick</strong> | <code>function</code>: callback function invoked when clicking on the microphone button. Default: <code>onClick() {}</code>.</li>
 <li><strong>onFinalText</strong> | <code>function</code>: callback function invoked once final text is received. Default: <code>onFinalText() {}</code>.</li>
@@ -1346,6 +1334,7 @@
 <li><strong>timeout</strong> | <code>number</code>: number of milliseconds after which to timeout the recording. Default: <code>none</code>.</li>
 <li><strong>stopTooltip</strong> | <code>string</code>: tooltip message desplayed while recording. Default: <code>&apos;Click to stop recording&apos;</code>.</li>
 <li><strong>startTooltip</strong> | <code>string</code>: tooltip message desplayed while not recording. Default: <code>&apos;Click to start recording&apos;</code>.</li>
+<li><strong>tooltipPlacement</strong> | <code>string</code>: direction of the tooltip. Default: <code>&apos;left&apos;</code>.</li>
 <li><strong>width</strong> | <code>number</code>: voice input width (in px). Default: <code>500</code>.</li>
 <li><strong>height</strong> | <code>number</code>: voice input height (in px). Default: <code>36</code>.</li>
 </ul>
@@ -1392,7 +1381,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Voice Input","level":"1.4.9.9","depth":3,"next":{"title":"Surveys","level":"1.4.10","depth":2,"path":"chapters/surveys.md","ref":"chapters/surveys.md","articles":[{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Muliple Choice Survey","level":"1.4.10.3","depth":3,"path":"components/multiple-choice-survey.md","ref":"components/multiple-choice-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.10.4","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.10.5","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"previous":{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/voice.md","mtime":"2018-10-08T06:49:58.347Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"../..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Voice Input","level":"1.4.9.9","depth":3,"next":{"title":"Surveys","level":"1.4.10","depth":2,"path":"chapters/surveys.md","ref":"chapters/surveys.md","articles":[{"title":"Free Text Survey","level":"1.4.10.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.10.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Muliple Choice Survey","level":"1.4.10.3","depth":3,"path":"components/multiple-choice-survey.md","ref":"components/multiple-choice-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.10.4","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.10.5","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"previous":{"title":"Text Input","level":"1.4.9.8","depth":3,"path":"components/input/text.md","ref":"components/input/text.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/input/voice.md","mtime":"2018-11-20T14:56:04.497Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"../..","book":{"language":""}});
         });
     </script>
 </div>
