--- a/components/js-shell.html
+++ b/components/js-shell.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1338,6 +1325,7 @@
 <li><strong>fontSize</strong> | <code>number</code>: undefined. Default: <code>16</code>.</li>
 <li><strong>onEvaluate</strong> | <code>function</code>: callback invoked whenever the <code>Evaluate</code> button is clicked. Default: <code>onEvaluate() {}</code>.</li>
 <li><strong>vars</strong> | <code>object</code>: scope object with variables that should be made available to evaluated <code>code</code>. Default: <code>none</code>.</li>
+<li><strong>voiceID</strong> | <code>string</code>: voice control identifier. Default: <code>none</code>.</li>
 </ul>
 
                                 
@@ -1382,7 +1370,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"JSShell","level":"1.4.12.4","depth":3,"next":{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},"previous":{"title":"Date Range Picker","level":"1.4.12.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/js-shell.md","mtime":"2018-10-08T06:49:58.351Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"JSShell","level":"1.4.12.4","depth":3,"next":{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},"previous":{"title":"Date Range Picker","level":"1.4.12.3","depth":3,"path":"components/date-range-picker.md","ref":"components/date-range-picker.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/js-shell.md","mtime":"2018-11-20T14:56:04.513Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
