--- a/components/match-list-question.html
+++ b/components/match-list-question.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1334,7 +1321,7 @@
 <p><a href="https://isle.heinz.cmu.edu/components/match-list-question/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>question</strong> | <code>string</code>: question to be displayed at the top of the match list question component. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>question</strong> | <code>(string|node)</code>: question to be displayed at the top of the match list question component. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>elements</strong> | <code>array<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>{a,b}</span><span class="token punctuation">&gt;</span></span></code>: an <code>array</code> holding the correct pairs displayed at the top of the free text question component. Each <code>array</code> element must be an <code>object</code> with <code>a</code> and <code>b</code> properties. Default: <code>[]</code>.</li>
 <li><strong>hintPlacement</strong> | <code>string</code>: placement of the hints (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;bottom&apos;</code>.</li>
 <li><strong>hints</strong> | <code>array<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>string</span><span class="token punctuation">&gt;</span></span></code>: hints providing guidance on how to answer the question. Default: <code>[]</code>.</li>
@@ -1342,8 +1329,11 @@
 <li><strong>feedback</strong> | <code>object</code>: controls whether to display feedback buttons. Default: <code>false</code>.</li>
 <li><strong>chat</strong> | <code>boolean</code>: controls whether the element should have an integrated chat. Default: <code>false</code>.</li>
 <li><strong>colorScale</strong> | <code>array</code>: if set, the supplied colors are used for the tiles. Default: <code>none</code>.</li>
+<li><strong>shuffle</strong> | <code>string</code>: specifies whether to shuffle the <code>left</code>, <code>right</code>, or <code>both</code> columns whose elements have to be matched. Default: <code>&apos;both&apos;</code>.</li>
+<li><strong>disableSubmitNotification</strong> | <code>boolean</code>: controls whether to disable submission notifications. Default: <code>false</code>.</li>
 <li><strong>submissionMsg</strong> | <code>string</code>: notification displayed when the learner first submits his answer. Default: <code>&apos;You have successfully submitted your answer.&apos;</code>.</li>
 <li><strong>resubmissionMsg</strong> | <code>string</code>: notification displayed for all submissions after the first one. Default: <code>&apos;You have successfully re-submitted your answer.&apos;</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onSubmit</strong> | <code>function</code>: callback invoked when students submits an answer. Default: <code>onSubmit() {}</code>.</li>
 </ul>
 
@@ -1389,7 +1379,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Match List Question","level":"1.4.7.3","depth":3,"next":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/match-list-question.md","mtime":"2018-10-08T06:49:58.363Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Match List Question","level":"1.4.7.3","depth":3,"next":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/match-list-question.md","mtime":"2018-11-20T14:56:04.913Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
