--- a/components/multiple-choice-question.html
+++ b/components/multiple-choice-question.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1334,15 +1321,17 @@
 <h4 id="options">Options:</h4>
 <ul>
 <li><strong>question</strong> | <code>string</code>: the question displayed at the top of the multiple choice component. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>solution</strong> | <code>(number|array) (required)</code>: number denoting which answer is correct or an <code>array</code> of the correct answer numbers in case the learner should be able to select multiple answers. Default: <code>none</code>.</li>
+<li><strong>solution</strong> | <code>(number|array)</code>: number denoting which answer is correct or an <code>array</code> of the correct answer numbers in case the learner should be able to select multiple answers. Default: <code>none</code>.</li>
 <li><strong>answers</strong> | <code>array (required)</code>: an <code>array</code> of answer objects. Each answer should be an object with <code>content</code> and <code>explanation</code> fields, which denote the displayed answer option and an explanation visible after the question has been submitted to explain why the answer is correct or incorrect. Default: <code>none</code>.</li>
 <li><strong>hintPlacement</strong> | <code>string</code>: placement of the hints (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;bottom&apos;</code>.</li>
 <li><strong>hints</strong> | <code>array<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>string</span><span class="token punctuation">&gt;</span></span></code>: hints providing guidance on how to answer the question. Default: <code>[]</code>.</li>
 <li><strong>feedback</strong> | <code>boolean</code>: controls whether to display feedback buttons. Default: <code>false</code>.</li>
 <li><strong>disabled</strong> | <code>boolean</code>: controls whether the question is disabled. Default: <code>false</code>.</li>
 <li><strong>chat</strong> | <code>boolean</code>: controls whether the element should have an integrated chat. Default: <code>false</code>.</li>
-<li><strong>provideFeedback</strong> | <code>boolean</code>: indicates whether feedback including the correct answer should be displayed after learners submit their answers. Default: <code>true</code>.</li>
+<li><strong>provideFeedback</strong> | <code>string</code>: if <code>full</code>, feedback including the correct answer is displayed after learners submit their answers; if <code>incremental</code>, feedback is only displayed for the selected answer; if <code>none</code>, no feedback is returned. Default: <code>&apos;incremental&apos;</code>.</li>
+<li><strong>disableSubmitNotification</strong> | <code>boolean</code>: controls whether to disable submission notifications. Default: <code>false</code>.</li>
 <li><strong>displaySolution</strong> | <code>boolean</code>: controls whether the solution is displayed upfront. Default: <code>false</code>.</li>
+<li><strong>voiceID</strong> | <code>string</code>: voice control identifier. Default: <code>none</code>.</li>
 <li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onSubmit</strong> | <code>function</code>: callback invoked after an answer is submitted. Default: <code>onSubmit(){}</code>.</li>
 </ul>
@@ -1389,7 +1378,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"next":{"title":"Number Question","level":"1.4.7.5","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},"previous":{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/multiple-choice-question.md","mtime":"2018-10-08T06:49:58.363Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"next":{"title":"Number Question","level":"1.4.7.5","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},"previous":{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/multiple-choice-question.md","mtime":"2018-11-20T14:56:04.945Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
