--- a/components/number-question.html
+++ b/components/number-question.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1327,7 +1314,7 @@
 <p><a href="https://isle.heinz.cmu.edu/components/number-question/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>question</strong> | <code>string</code>: number question. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>question</strong> | <code>(string|node)</code>: number question. Default: <code>&apos;&apos;</code>.</li>
 <li><strong>hintPlacement</strong> | <code>string</code>: placement of the hints (either <code>top</code>, <code>left</code>, <code>right</code>, or <code>bottom</code>). Default: <code>&apos;top&apos;</code>.</li>
 <li><strong>hints</strong> | <code>array<span class="token tag"><span class="token tag"><span class="token punctuation">&lt;</span>string</span><span class="token punctuation">&gt;</span></span></code>: hints providing guidance on how to answer the question. Default: <code>[]</code>.</li>
 <li><strong>feedback</strong> | <code>boolean</code>: controls whether to display feedback buttons. Default: <code>false</code>.</li>
@@ -1336,7 +1323,9 @@
 <li><strong>max</strong> | <code>number</code>: maximum allowed input value. Default: <code>null</code>.</li>
 <li><strong>min</strong> | <code>number</code>: minimum allowed input value. Default: <code>null</code>.</li>
 <li><strong>provideFeedback</strong> | <code>boolean</code>: indicates whether feedback including the correct answer should be displayed after learners submit their answers. Default: <code>true</code>.</li>
+<li><strong>disableSubmitNotification</strong> | <code>boolean</code>: controls whether to disable submission notifications. Default: <code>false</code>.</li>
 <li><strong>chat</strong> | <code>boolean</code>: controls whether the element should have an integrated chat. Default: <code>false</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onChange</strong> | <code>function</code>: callback  which is triggered after the value of the number field changes; receives the current value as its sole argument. Default: <code>onChange() {}</code>.</li>
 <li><strong>onSubmit</strong> | <code>function</code>: callback invoked when answer is submitted; has as first parameter a <code>boolean</code> indicating whether the answer was correctly anwered (if applicable, <code>null</code> otherwise) and the supplied answer as the second parameter. Default: <code>onSubmit() {}</code>.</li>
 </ul>
@@ -1383,7 +1372,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Number Question","level":"1.4.7.5","depth":3,"next":{"title":"Order Question","level":"1.4.7.6","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},"previous":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/number-question.md","mtime":"2018-10-08T06:49:58.367Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Number Question","level":"1.4.7.5","depth":3,"next":{"title":"Order Question","level":"1.4.7.6","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},"previous":{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/number-question.md","mtime":"2018-11-20T14:56:04.965Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
