--- a/components/quiz.html
+++ b/components/quiz.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1339,12 +1326,17 @@
 <ul>
 <li><strong>confidence</strong> | <code>boolean</code>: whether to display a Likert scale asking for the confidence of the user&apos;s answer. Default: <code>false</code>.</li>
 <li><strong>forceConfidence</strong> | <code>boolean</code>: controls whether a user has to supply a confidence level before moving to the next question. Default: <code>false</code>.</li>
-<li><strong>count</strong> | <code>number (required)</code>: number of questions to include in the quiz. Default: <code>none</code>.</li>
+<li><strong>count</strong> | <code>number</code>: number of questions to include in the quiz. Default: <code>none</code>.</li>
 <li><strong>questions</strong> | <code>array (required)</code>: array of questions from which questions will be randomly selected. Default: <code>none</code>.</li>
 <li><strong>active</strong> | <code>boolean</code>: controls whether the timer for the quiz is active. Default: <code>true</code>.</li>
 <li><strong>duration</strong> | <code>number</code>: duration of the quiz; once time is up, the summary page will be displayed. Default: <code>none</code>.</li>
 <li><strong>skippable</strong> | <code>boolean</code>: controls whether questions in  the quiz are skippable. Default: <code>true</code>.</li>
+<li><strong>footerNodes</strong> | <code>array</code>: undefined. Default: <code>[]</code>.</li>
+<li><strong>nextLabel</strong> | <code>string</code>: undefined. Default: <code>&apos;Next Question&apos;</code>.</li>
+<li><strong>showFinishButton</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
+<li><strong>finishLabel</strong> | <code>string</code>: undefined. Default: <code>&apos;Finish Quiz&apos;</code>.</li>
 <li><strong>onFinished</strong> | <code>function</code>: callback invoked when the quiz is finished and the results page is displayed. Default: <code>onFinished() {}</code>.</li>
+<li><strong>onSubmit</strong> | <code>function</code>: callback invoked when user submits an answer. Default: <code>onSubmit() {}</code>.</li>
 </ul>
 
                                 
@@ -1389,7 +1381,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Quiz","level":"1.4.7.1","depth":3,"next":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"previous":{"title":"Question","level":"1.4.7","depth":2,"path":"chapters/question.md","ref":"chapters/question.md","articles":[{"title":"Quiz","level":"1.4.7.1","depth":3,"path":"components/quiz.md","ref":"components/quiz.md","articles":[]},{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Number Question","level":"1.4.7.5","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},{"title":"Order Question","level":"1.4.7.6","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},{"title":"Range Question","level":"1.4.7.7","depth":3,"path":"components/range-question.md","ref":"components/range-question.md","articles":[]},{"title":"Select Question","level":"1.4.7.8","depth":3,"path":"components/select-question.md","ref":"components/select-question.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/quiz.md","mtime":"2018-10-08T06:49:58.375Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Quiz","level":"1.4.7.1","depth":3,"next":{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"previous":{"title":"Question","level":"1.4.7","depth":2,"path":"chapters/question.md","ref":"chapters/question.md","articles":[{"title":"Quiz","level":"1.4.7.1","depth":3,"path":"components/quiz.md","ref":"components/quiz.md","articles":[]},{"title":"Free Text Question","level":"1.4.7.2","depth":3,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},{"title":"Match List Question","level":"1.4.7.3","depth":3,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},{"title":"Multiple Choice Question","level":"1.4.7.4","depth":3,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},{"title":"Number Question","level":"1.4.7.5","depth":3,"path":"components/number-question.md","ref":"components/number-question.md","articles":[]},{"title":"Order Question","level":"1.4.7.6","depth":3,"path":"components/order-question.md","ref":"components/order-question.md","articles":[]},{"title":"Range Question","level":"1.4.7.7","depth":3,"path":"components/range-question.md","ref":"components/range-question.md","articles":[]},{"title":"Select Question","level":"1.4.7.8","depth":3,"path":"components/select-question.md","ref":"components/select-question.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/quiz.md","mtime":"2018-11-20T14:56:05.117Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
