--- a/components/timer.html
+++ b/components/timer.html
@@ -749,20 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
-            
-                <a href="grid.html">
-            
-                    
-                    Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -775,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -788,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -801,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -814,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1331,10 +1318,10 @@
 <p><a href="https://isle.heinz.cmu.edu/components/timer/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>id</strong> | <code>string (required)</code>: the unique <code>string</code> ID for the timer. The timer component is persistent over page refreshes. Default: <code>none</code>.</li>
+<li><strong>id</strong> | <code>string (required)</code>: the unique <code>string</code> ID for the timer. If an ID is set, the timer component is persistent over page refreshes. Default: <code>none</code>.</li>
 <li><strong>active</strong> | <code>boolean (required)</code>: flag that can be toggled to start or pause the timer. Default: <code>none</code>.</li>
 <li><strong>duration</strong> | <code>number (required)</code>: duration in seconds for the timer. Default: <code>none</code>.</li>
-<li><strong>invisible</strong> | <code>boolean</code>: undefined. Default: <code>false</code>.</li>
+<li><strong>invisible</strong> | <code>boolean</code>: controls whether the timer should be hidden. Default: <code>false</code>.</li>
 <li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
 <li><strong>onTimeUp</strong> | <code>function</code>: callback invoked when the timer runs out. Default: <code>onTimeUp() {}</code>.</li>
 </ul>
@@ -1381,7 +1368,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.12.6","depth":3,"next":{"title":"General","level":"1.4.13","depth":2,"path":"chapters/general.md","ref":"chapters/general.md","articles":[{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"path":"components/beacon-tooltip.md","ref":"components/beacon-tooltip.md","articles":[]},{"title":"IFrame","level":"1.4.13.2","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.3","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.13.4","depth":3,"path":"components/tex.md","ref":"components/tex.md","articles":[]},{"title":"Lesson Submit","level":"1.4.13.5","depth":3,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Runner","level":"1.4.13.6","depth":3,"path":"components/runner.md","ref":"components/runner.md","articles":[]},{"title":"Metric","level":"1.4.13.7","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"RealTimeMetrics","level":"1.4.13.8","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},{"title":"Text","level":"1.4.13.9","depth":3,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"News","level":"1.4.13.10","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},{"title":"Video Player","level":"1.4.13.11","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},{"title":"Weather","level":"1.4.13.12","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},{"title":"Wikipedia","level":"1.4.13.13","depth":3,"path":"components/wikipedia.md","ref":"components/wikipedia.md","articles":[]}]},"previous":{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2018-10-08T06:49:58.391Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Timer","level":"1.4.12.6","depth":3,"next":{"title":"General","level":"1.4.13","depth":2,"path":"chapters/general.md","ref":"chapters/general.md","articles":[{"title":"Beacon Tooltip","level":"1.4.13.1","depth":3,"path":"components/beacon-tooltip.md","ref":"components/beacon-tooltip.md","articles":[]},{"title":"IFrame","level":"1.4.13.2","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.3","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"LaTeX Equations","level":"1.4.13.4","depth":3,"path":"components/tex.md","ref":"components/tex.md","articles":[]},{"title":"Lesson Submit","level":"1.4.13.5","depth":3,"path":"components/lesson-submit.md","ref":"components/lesson-submit.md","articles":[]},{"title":"Runner","level":"1.4.13.6","depth":3,"path":"components/runner.md","ref":"components/runner.md","articles":[]},{"title":"Metric","level":"1.4.13.7","depth":3,"path":"components/db-metrics.md","ref":"components/db-metrics.md","articles":[]},{"title":"RealTimeMetrics","level":"1.4.13.8","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},{"title":"Text","level":"1.4.13.9","depth":3,"path":"components/text.md","ref":"components/text.md","articles":[]},{"title":"News","level":"1.4.13.10","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},{"title":"Video Player","level":"1.4.13.11","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]},{"title":"Weather","level":"1.4.13.12","depth":3,"path":"components/weather.md","ref":"components/weather.md","articles":[]},{"title":"Wikipedia","level":"1.4.13.13","depth":3,"path":"components/wikipedia.md","ref":"components/wikipedia.md","articles":[]}]},"previous":{"title":"Playground","level":"1.4.12.5","depth":3,"path":"components/playground.md","ref":"components/playground.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/timer.md","mtime":"2018-11-20T14:56:05.745Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-11-20T14:57:51.317Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
